[gd_scene load_steps=7 format=3 uid="uid://bkih8y3h7jb2e"]

[ext_resource type="Script" uid="uid://dfvyjfgy6aie2" path="res://scripts/main_game.gd" id="1_pkh6a"]
[ext_resource type="PackedScene" uid="uid://c3b00o8bcet2v" path="res://scripts/question_handler/question_handler.tscn" id="2_cianq"]
[ext_resource type="Script" uid="uid://bsbvr064tsyx6" path="res://scripts/incorrect_answer_popup.gd" id="3_cianq"]
[ext_resource type="Texture2D" uid="uid://2e4wy5e2kimn" path="res://assets/images/correct.png" id="4_l6nb4"]
[ext_resource type="AudioStream" uid="uid://cfhmm5u06drry" path="res://assets/audio/correct.mp3" id="5_l6nb4"]

[sub_resource type="Gradient" id="Gradient_ijcxg"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_pkh6a")

[node name="Label" type="Label" parent="."]
offset_left = -19.0
offset_top = -12.0
offset_right = 21.0
offset_bottom = 11.0

[node name="question_handler" parent="." instance=ExtResource("2_cianq")]

[node name="ScoreIndicator" type="Label" parent="."]
offset_left = 384.0
offset_top = 24.0
offset_right = 760.0
offset_bottom = 47.0
text = "[ SCORE ]"
horizontal_alignment = 1

[node name="IncorrectAnswerPopup" type="Panel" parent="."]
visible = false
offset_left = 304.0
offset_top = 88.0
offset_right = 848.0
offset_bottom = 360.0
script = ExtResource("3_cianq")

[node name="StaticLabel" type="Label" parent="IncorrectAnswerPopup"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.031
anchor_top = 0.062
anchor_right = 0.96900004
anchor_bottom = 0.26500002
offset_left = 0.063999176
offset_top = 0.09600067
offset_right = -0.064086914
offset_bottom = -0.08000183
text = "That answer was incorrect!
The correct answer was:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="IncorrectAnswerPopup"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.031
anchor_top = 0.792
anchor_right = 0.969
anchor_bottom = 0.953
offset_left = 0.0639997
offset_top = -0.0640106
offset_right = -0.0640106
offset_bottom = 0.0239868
text = "OK"

[node name="AnswerLabel" type="Label" parent="IncorrectAnswerPopup"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.031
anchor_top = 0.294
anchor_right = 0.96700007
anchor_bottom = 0.38200003
offset_left = -0.86400795
offset_top = 0.03199768
offset_right = 0.095947266
offset_bottom = 0.09599304
text = "[ANSWER]"
horizontal_alignment = 1

[node name="ReasonLabel" type="RichTextLabel" parent="IncorrectAnswerPopup"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.029000001
anchor_top = 0.41200003
anchor_right = 0.9710001
anchor_bottom = 0.76500005
offset_left = 0.22399902
offset_top = -0.06401062
offset_right = -0.22406006
offset_bottom = -0.08001709
text = "[REASON]"
horizontal_alignment = 1

[node name="CorrectParticle" type="CPUParticles2D" parent="."]
position = Vector2(576, 192)
emitting = false
amount = 1
texture = ExtResource("4_l6nb4")
one_shot = true
direction = Vector2(0, -1)
spread = 77.94
color_ramp = SubResource("Gradient_ijcxg")

[node name="CorrectNoise" type="AudioStreamPlayer2D" parent="."]
position = Vector2(576, 328)
stream = ExtResource("5_l6nb4")
panning_strength = 0.0

[connection signal="next_question_shown" from="question_handler" to="IncorrectAnswerPopup" method="_on_question_handler_next_question_shown"]
[connection signal="question_answered_correctly" from="question_handler" to="." method="_on_question_handler_question_answered_correctly"]
[connection signal="question_answered_incorrectly" from="question_handler" to="." method="_on_question_handler_question_answered_incorrectly"]
[connection signal="button_clicked" from="IncorrectAnswerPopup" to="." method="_on_incorrect_answer_popup_button_clicked"]
